# ProjectLodestar

./: .cursorrules  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE_MODE.md  CLAUDE_PROJECT_SETUP.md  QuickRef.ReadMe  QuickRef.md  README.md  ROADMAP.md  V2_HANDOVER.md  lodestar  lodestar.bat  pyproject.toml
.claude/: ARCHITECTURE_PRINCIPLES.md  MODULE_TEMPLATE.md  PROJECT_INSTRUCTIONS.md  RULES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
config/: litellm_config.yaml  litellm_config.yaml.backup  modules.yaml
docs/: AGENT_GUIDELINES.md  ARCHITECTURE.md  BRANCHING_IMPLEMENTATION.md  BRANCHING_STRATEGY.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  PROJECT_STATUS_2026-02-09.md  PROJECT_STATUS_2026-02-10.md  QuickRef.md  SECURITY.md  SETUP.md  TASK_ALLOCATION.md  VERSIONING.md  WORKFLOW.md
docs/adr/: 0001-use-litellm-for-cost-optimization.md  0002-use-litellm-for-cost-optimization.md  0002-use-whole-edit-format-for-small-local-models.md  0003-multi-provider-routing-fully-operational.md  0003-use-litellm-for-cost-optimization.md  0004-semantic-task-based-routing.md  0004-use-click-for-cli-framework.md  0005-cost-storage-architecture.md  0005-use-whole-edit-format-for-small-local-models.md  0006-ai-visual-diff.md  0006-use-whole-edit-format-for-small-local-models.md  0007-cost-dashboard.md  (+4 more)
modules/: __init__.py  base.py  cli.py
scripts/: adr-new.sh  quick-start.sh  run-benchmarks.sh  start-router.sh  status.sh  test-all-providers.sh  test-lodestar.sh  test-models.sh  test-providers-simple.sh
(+93 files in other folders)
