[project]
name = "lodestar"
version = "2.0.0-dev"
description = "AI development environment with intelligent cost-optimized LLM routing"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "litellm>=1.74.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["modules"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["modules"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
